--- a/Gameverse/Web.config
+++ b/Gameverse/Web.config
@@ -8,9 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <!--
   <connectionStrings>
-    <!--ep: must be under configSections-->
     <add name="RegistrationContext" providerName="System.Data.SqlClient" connectionString="data source=(localdb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\RegistrationDB.mdf;integrated security=True;multipleactiveresultsets=True;" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="GameverseEntities" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Gameverse.mdf;Integrated Security=True;MultipleActiveResultSets=true" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
