--- a/Gameverse/Gameverse.csproj
+++ b/Gameverse/Gameverse.csproj
@@ -74,6 +74,17 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Images\BatmanArkhamNight.jpg" />
+    <Content Include="Assets\Images\CallOfDutyBlackOps3.jpg" />
+    <Content Include="Assets\Images\DeadPool.jpg" />
+    <Content Include="Assets\Images\FarCryPrimal.jpg" />
+    <Content Include="Assets\Images\GearsOfWarUltimateEdition.jpg" />
+    <Content Include="Assets\Images\PokkenTournament.jpg" />
+    <Content Include="Assets\Images\RiseOfTheTombRaider.jpg" />
+    <Content Include="Assets\Images\StarWarsBattlefront.jpg" />
+    <Content Include="Assets\Images\StreetFighterV.jpg" />
+    <Content Include="Assets\Images\TomClayncysTheDivision.jpg" />
+    <Content Include="Assets\Images\YoshisWoollyWorld.jpg" />
     <Content Include="Code\about.aspx" />
     <Content Include="Assets\CSS\custom.css" />
     <Content Include="Assets\JS\jquery-2.2.0.min.js" />
