Adjusted login and web.config pages; finished settings page

--- a/Gameverse/Web.config
+++ b/Gameverse/Web.config
@@ -13,7 +13,7 @@
     <add name="RegistrationContext" providerName="System.Data.SqlClient" connectionString="data source=(localdb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\RegistrationDB.mdf;integrated security=True;multipleactiveresultsets=True;" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="GameverseEntities" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Gameverse.mdf;Integrated Security=True;MultipleActiveResultSets=true" />
+    <add name="GameverseEntities" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Gameverse.mdf;Integrated Security=True;MultipleActiveResultSets=true" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
