Hashed passwords, fixed typo, added disclaimer to master

--- a/Gameverse/Gameverse.csproj
+++ b/Gameverse/Gameverse.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Code\myOrders.aspx.designer.cs">
       <DependentUpon>myOrders.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Code\SecuredPassword.cs" />
     <Compile Include="Code\settings.aspx.cs">
       <DependentUpon>settings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
