--- a/Gameverse/Web.config
+++ b/Gameverse/Web.config
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="CreditAppId" value="57" />
+    <add key="CreditAppSharedKey" value="56@E2HeyxP"/>
+  </appSettings>
   <!--
   <connectionStrings>
     <add name="RegistrationContext" providerName="System.Data.SqlClient" connectionString="data source=(localdb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\RegistrationDB.mdf;integrated security=True;multipleactiveresultsets=True;" />
