--- a/Gameverse/Gameverse.csproj
+++ b/Gameverse/Gameverse.csproj
@@ -79,12 +79,18 @@
     <Content Include="Assets\Images\FarCryPrimal.jpg" />
     <Content Include="Assets\Images\ForzaMotorsport6.jpg" />
     <Content Include="Assets\Images\JumboBackground.jpg" />
+    <Content Include="Assets\Images\LastTinker.jpg" />
     <Content Include="Assets\Images\LEGOMarvel%27sAvengers.jpg" />
+    <Content Include="Assets\Images\LogoWhite.png" />
     <Content Include="Assets\Images\MarioKart8.jpg" />
+    <Content Include="Assets\Images\MarioTennis.jpg" />
     <Content Include="Assets\Images\Splatoon.jpg" />
     <Content Include="Assets\Images\StarWarsBattlefront.jpg" />
     <Content Include="Assets\Images\StreetFighterV.jpg" />
+    <Content Include="Assets\Images\subtle.png" />
     <Content Include="Assets\Images\SuperSmashBros.jpg" />
+    <Content Include="Assets\Images\Terraria.jpg" />
+    <Content Include="Assets\Images\TheOrder.jpg" />
     <Content Include="Assets\Images\TheWitcher3WildHunt.jpg" />
     <Content Include="Assets\Images\TomClancy%27sTheDivision.jpg" />
     <Content Include="Assets\Images\Yoshi%27sWoollyWorld.jpg" />
